force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Data_Dictionary_Group__c.field-meta.xml
<CustomField>
    <fullName>conference360__Data_Dictionary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Localization.</inlineHelpText>
    <label>Data Dictionary Group</label>
    <referenceTo>bt_stripe__Data_Dictionary_Group__c</referenceTo>
    <relationshipLabel>Event Groups</relationshipLabel>
    <relationshipName>Event_Group</relationshipName>
    <type>Lookup</type>
</CustomField>