force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Default__c.field-meta.xml
<CustomField>
    <fullName>conference360__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Defines this Event Group as the Default. Values set on it will be used on the Event Listing page on the Platform.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>