force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <inlineHelpText>Description of this Event Group. If a featured Event is selected, it will override this description.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>