force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Event_Group_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Group_URL__c</fullName>
    <description>Public URL to this Event Group where upcoming Events related to this group are displayed.</description>
    <formula>BLANKVALUE($Setup.conference360__Blackthorn_Events_Settings__c.conference360__Platform_Domain__c, &apos;https://events.blackthorn.io/&apos;) &amp; &apos;/&apos; &amp; $Organization.Id &amp; &apos;/g/&apos; &amp; conference360__Key__c</formula>
    <inlineHelpText>Public URL to this Event Group where upcoming Events related to this group are displayed.</inlineHelpText>
    <label>Event Group URL</label>
    <type>Text</type>
</CustomField>