force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Event_Settings__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Event Settings for this Event Group. This will override the Event Settings for Events that are part of this Event Group.</inlineHelpText>
    <label>Event Settings</label>
    <referenceTo>conference360__Event_Settings__c</referenceTo>
    <relationshipLabel>Event Groups</relationshipLabel>
    <relationshipName>Event_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>