force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>conference360__Filter_Fields__c</fullName>
    <description>Available fields to filter on.</description>
    <inlineHelpText>These fields define the Sort By dropdown on an event page.</inlineHelpText>
    <label>Filter Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
                <label>Sort by Date</label>
            </value>
            <value>
                <fullName>Distance</fullName>
                <label>Sort by Distance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>