force-app/main/default/objects/conference360__Event_Group__c/fields/conference360__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Logo_URL__c</fullName>
    <description>Logo for this Event Group.</description>
    <inlineHelpText>Logo for this Event Group.</inlineHelpText>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>