force-app/main/default/objects/conference360__Event_Group__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Default__c</columns>
    <columns>conference360__Key__c</columns>
    <columns>conference360__Event_Group_URL__c</columns>
    <columns>conference360__UI_Experience__c</columns>
    <columns>conference360__Filter_Fields__c</columns>
    <columns>conference360__Event_Settings__c</columns>
    <columns>conference360__Data_Dictionary_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>